--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
@@ -58,7 +58,7 @@
                         <input type="hidden" name="itemnumber" value="<!-- TMPL_VAR NAME="itemnumber" -->" />
                         <input type="hidden" name="fbr" value="<!-- TMPL_VAR NAME="holdingbranch" -->" />
                         <input type="hidden" name="tbr" value="<!-- TMPL_VAR NAME="branchcode" -->" />
-                    <input type="submit" value="Transfer this document" />
+                    <input type="submit" value="Transfer this item" />
                     </form>
                     </td>
                 </tr>
