--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
@@ -185,7 +185,7 @@ function confirm_deletion(count) {
         </table>
     </div>
 <!-- TMPL_ELSE -->
-    <p>we don't have any physical item for this document</p>
+    <p>No physical items for this record</p>
 <!-- /TMPL_IF -->
 <!-- TMPL_IF name="subscriptionsnumber" -->
 <div id="catalogue_detail_subscriptions">
