--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tmpl
@@ -7,6 +7,7 @@ function _(s) { return s } // dummy function for gettext
 
 function confirmnotdup(){
 	document.getElementById("confirm_not_duplicate").value = 1;
+	alert(_("Not a duplicate confirmed. Please click on Add biblio to save the record"));
 	var checkform =	document.getElementById("f");
 	Check(checkform);
 }
