--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tmpl
@@ -162,14 +162,16 @@ patron <!-- TMPL_VAR name="firstname" --> <!-- TMPL_VAR NAME="surname" -->
 			Other name: </label>
 			<input type="text" id="othernames" name="othernames" size="20"  value="<!-- TMPL_VAR NAME="othernames" -->" />
 		</li>
-		<li class="radio"><!-- TMPL_IF NAME="female" --><label for="sex-female">Female </label><input type="radio" name="sex" id="sex-female" value="F" checked="checked" />
-		<label for="sex-male">Male </label><input type="radio" name="sex" id="sex-male" value="M" />
+		<li class="radio">
+		<!-- TMPL_IF NAME="female" -->
+				<label for="sex-female">Female </label><input type="radio" name="sex" id="sex-female" value="F" checked="checked" />
+				<label for="sex-male">Male </label><input type="radio" name="sex" id="sex-male" value="M" />
 		<!-- TMPL_ELSE -->
-		<label for="sex-female">Female </label><input type="radio" name="sex" id="sex-female" value="F" />
-		<label for="sex-male">Male </label><input type="radio" name="sex" id="sex-male" value="M" checked="checked" /></li>
-       	</ol>
-		
+				<label for="sex-female">Female </label><input type="radio" name="sex" id="sex-female" value="F" />
+				<label for="sex-male">Male </label><input type="radio" name="sex" id="sex-male" value="M" checked="checked" />
 		<!-- /TMPL_IF -->
+       	</li>
+		</ol>
 <!--TMPL_IF Name="C"-->  <p>
   <input name="guarantordelete" type="button" value="Delete Guarantor" onclick="document.form.guarantorid.value='';document.form.guarantorinfo.value='',document.form.guarantorsearch.value='Find guarantor';" />
   <!-- TMPL_IF NAME="guarantorid"-->  
