--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tmpl
@@ -22,7 +22,7 @@
 			<!-- TMPL_LOOP NAME="loopfilter" -->
 					<p><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --><!-- TMPL_VAR NAME="crit"--> =<!-- TMPL_VAR NAME="filter"--><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --></p>
 			<!-- /TMPL_LOOP -->
-		<!-- /TMPL_IF NAME="loopfilter"-->
+		<!-- /TMPL_IF-->
 		
 		<table>
 			<tr>
@@ -41,7 +41,7 @@
 							</td>
 						<!-- /TMPL_LOOP -->
 					</tr>
-				<!-- /TMPL_LOOP NAME="looprow" -->
+				<!-- /TMPL_LOOP -->
 		</table>
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
