--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/acquisitions_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/acquisitions_stats.tmpl
@@ -1,10 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Reports &rsaquo; Acquisitions Statistics</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
+<!-- TMPL_INCLUDE NAME="calendar.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
@@ -51,7 +48,7 @@
 							<!-- TMPL_VAR NAME="totalrow" -->
 						</td>
 					</tr>
-				<!-- /TMPL_LOOP NAME="looprow" -->
+				<!-- /TMPL_LOOP -->
 				<tr >
 					<th>TOTAL</th>
 					<!-- TMPL_LOOP NAME="loopfooter" -->
