More work to toolbars and menus. Adding experimental YUI-based toolbar to detail.tmpl. Adding dashboard-style layout to tools-home.tmpl. Correcting markup in request.tmpl. Adding patron information variables to request.pl for display in holds-menu.inc.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -106,6 +106,10 @@ li {
 	list-style-type : disc;
 }
 
+li li {
+	list-style-type : circle;
+}
+
 #header {
 	background-color : #F3F3F3;
 	border-bottom : 1px solid #E8E8E8;
@@ -180,7 +184,7 @@ table {
 td, th {
 	border-bottom : 1px solid #BCBCBC;
 	border-left : 1px solid #BCBCBC;
-	padding : .5em;
+	padding : .2em .3em;
 }
 
 td {
@@ -240,7 +244,7 @@ div#header_search {
 	background-repeat : no-repeat;
 	float: left;
 	padding-left : 14.2em;
-	margin: 1em 0 1.5em 0;
+	margin: .3em 0 .5em 0;
 }
 
 div#header_search input {
@@ -679,4 +683,8 @@ fieldset.rows fieldset.action {
 .checkedout {
 	color : #999999;
 	font-style : italic;
+}
+
+.subfield_not_filled {
+	background-color : #FFFF99;
 }
