--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/ISBDdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/ISBDdetail.tmpl
@@ -41,6 +41,7 @@ function confirm_deletion(count) {
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="cat-toolbar.inc" -->
 
 <h1>MARC biblio : <!-- TMPL_VAR NAME="biblionumber" --></h1>
 
@@ -54,6 +55,7 @@ function confirm_deletion(count) {
 </div>
 </div>
 <div class="yui-b">
+<!-- TMPL_INCLUDE NAME="biblio-view-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-menu.inc" -->
 </div>
 </div>
