--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
@@ -67,7 +67,7 @@ function Addbiblio(op) {
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
-<!-- TMPL_INCLUDE NAME="action-catalogue.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-toolbar.inc" -->
 
 <!-- TMPL_UNLESS name="popup" -->
     <h1>MARC biblio : <!-- TMPL_VAR NAME="biblionumber" --></h1>
