--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/moredetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/moredetail.tmpl
@@ -14,6 +14,7 @@
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="cat-toolbar.inc" -->
 
 <div id="catalogue_detail_biblio">
 	<!-- TMPL_LOOP NAME="BIBITEM_DATA" -->
@@ -81,6 +82,7 @@ NAME="biblionumber"-->&amp;itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->">Modif
 </div>
 </div>
 <div class="yui-b">
+<!-- TMPL_INCLUDE NAME="biblio-view-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-menu.inc" -->
 </div>
 </div>
