--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
@@ -8,38 +8,41 @@
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; Tools</div>
 
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b">
+<div id="doc3">
+<div id="bd">
+	<div class="yui-gb">
 
-<h1>Koha tools</h1>
-
+<div class="yui-u first">
 <dl>
+    <dt><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></dt>
+    <dd>Write news for the OPAC and staff interfaces.</dd>
+	
     <dt><a href="/cgi-bin/koha/labels/label-home.pl">Label creator</a></dt>
     <dd>Create printable labels and barcodes from catalog data.</dd>
 
     <dt><a href="/cgi-bin/koha/tools/holidays.pl">Holidays</a></dt>
     <dd>Define holidays (days where the library is closed)</dd>
-
+	</dl>
+</div>
+<div class="yui-u">
+	<dl>
     <dt><a href="/cgi-bin/koha/tools/export.pl">Export</a></dt>
     <dd>Export data</dd>
 
+    <dt><a href="/cgi-bin/koha/tools/inventory.pl">Inventory/stocktaking</a></dt>
+    <dd>Perform inventory (stocktaking) of your catalogue</dd>
+
     <dt><a href="/cgi-bin/koha/tools/import.pl">Reservoir Import</a></dt>
     <dd>Import data into the reservoir.</dd>
-
-    <dt><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></dt>
-    <dd>Write news for the OPAC and staff interfaces.</dd>
-
+	</dl>
+</div>
+<div class="yui-u">
+<dl>
     <dt><a href="/cgi-bin/koha/tools/letter.pl">Notices</a></dt>
     <dd>Define notices (print and email notification messages for overdues, etc.)</dd>
 
     <dt><a href="/cgi-bin/koha/tools/overduerules.pl">Overdue rules</a></dt>
     <dd>Rules for overdue books</dd>
-
-    <dt><a href="/cgi-bin/koha/tools/inventory.pl">Inventory/stocktaking</a></dt>
-    <dd>Perform inventory (stocktaking) of your catalogue</dd>
 
     <dt><a href="/cgi-bin/koha/tools/cleanborrowers.pl">Clean borrowers</a></dt>
     <dd>Delete old borrowers and anonymize circulation history (deletes borrower reading history)</dd>
@@ -47,11 +50,8 @@
     <dt><a href="/cgi-bin/koha/tools/viewlog.pl">Log viewer</a></dt>
     <dd>Browse the system logs</dd>
 </dl>
+</div>
 
-</div>
-</div>
-<div class="yui-b">
-<!-- TMPL_INCLUDE NAME="tools-menu.inc" -->
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
