--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tmpl
@@ -105,17 +105,18 @@ if (alreadyreserved > "0"){
     <!-- /TMPL_IF -->
     <form action="request.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" method="post" onsubmit="request.pl" name="getborrower">
         <!-- TMPL_UNLESS name="CGIselectborrower" -->
+			<fieldset class="brief">
 		        <label for="patron">Patron: </label>
 				<div class="hint">(type card number or part of a name)</div>
                 <input type="text" size="20" id="patron" name="findborrower" /> 
                 <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber"-->" />
                 <input type="submit" value="Search" />
+			</fieldset>
         <!-- TMPL_ELSE -->
             <!-- TMPL_VAR NAME="CGIselectborrower" -->
                 <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber"-->" />
                 <input type="submit" value="Select" />
         <!-- /TMPL_UNLESS -->
-		</fieldset>
     </form>
 <!-- TMPL_ELSE -->
   <!-- TMPL_IF NAME="maxreserves" -->
@@ -291,9 +292,15 @@ if (alreadyreserved > "0"){
     <!-- TMPL_IF Name="wait" -->
             <option value="W" selected="selected">Waiting</option>
     	<!-- TMPL_ELSE -->
-            <option value="<!-- TMPL_VAR NAME="priority" -->" <!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->
+            <option value="<!-- TMPL_VAR NAME="priority" -->" selected="selected">
               <!-- TMPL_VAR NAME="priority" -->
             </option>
+    	<!-- TMPL_ELSE -->
+			<option value="<!-- TMPL_VAR NAME="priority" -->">
+              <!-- TMPL_VAR NAME="priority" -->
+            </option>
+        <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
             <option value="del">del</option>
           </select>
@@ -307,12 +314,12 @@ if (alreadyreserved > "0"){
     <!-- TMPL_IF Name="wait" -->
     	<!-- TMPL_IF NAME="atdestination" -->
                 <!-- TMPL_IF name="found" -->
-                Item waiting at <b> <!-- TMPL_VAR NAME="wbrname" --></b> <input type="hidden" name="pickup" value=<!-- TMPL_VAR NAME="wbrcd" --> />
+                Item waiting at <b> <!-- TMPL_VAR NAME="wbrname" --></b> <input type="hidden" name="pickup" value="<!-- TMPL_VAR NAME="wbrcd" -->" />
             <!-- TMPL_ELSE -->
                 Waiting to be pulled
             <!-- /TMPL_IF -->
           <!-- TMPL_ELSE -->
-            Item being transfered to <b> <!-- TMPL_VAR NAME="wbrname" --></b> <input type="hidden" name="pickup" value=<!-- TMPL_VAR NAME="wbrcd" --> />
+            Item being transfered to <b> <!-- TMPL_VAR NAME="wbrname" --></b> <input type="hidden" name="pickup" value="<!-- TMPL_VAR NAME="wbrcd" -->" />
          <!-- /TMPL_IF -->
     <!-- TMPL_ELSE -->
           <select name="pickup">
@@ -351,7 +358,7 @@ if (alreadyreserved > "0"){
       </tr>
   <!-- /TMPL_LOOP --> <!-- existing reserveloop -->
      </table>
-<fieldset class="action"><input type="submit" name="submit" value="Cancel hold(s)" border="0" /></fieldset>
+<fieldset class="action"><input type="submit" name="submit" value="Cancel hold(s)" /></fieldset>
 </fieldset>
 </form>
 <!-- /TMPL_IF -->
@@ -360,7 +367,7 @@ if (alreadyreserved > "0"){
 </div>
 </div>
 <div class="yui-b">
-<!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
+<!-- TMPL_INCLUDE NAME="hold-menu.inc" -->
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
