--- a/koha-tmpl/intranet-tmpl/prog/en/modules/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/intranet-main.tmpl
@@ -8,9 +8,8 @@
 <div id="bd">
 	<div class="yui-gb">
 	<div class="yui-u first">
-	First Column
         <!-- TMPL_IF name="koha_news_count" -->
-		<div>
+		<div id="koha-news">
             News
 			<!-- TMPL_VAR name="koha_news_count" --> recent news item(s)
             <!-- TMPL_LOOP name="koha_news" -->
@@ -18,21 +17,82 @@
 					 on <!-- TMPL_VAR name="newdate" -->
                     <!-- TMPL_VAR name="new" -->
             <!-- /TMPL_LOOP -->
-		</div>
+		</div><!-- /koha-news -->
         <!-- /TMPL_IF -->
 		<div>
 		<!-- TMPL_VAR NAME="IntranetmainUserblock" -->
 		</div>
 	</div>
+	
 	<div class="yui-u">
-	Third Column
+
+    <!-- TMPL_IF NAME="CAN_user_editcatalogue" -->
+    <h3><a href="/cgi-bin/koha/cataloguing/addbooks.pl">Cataloguing</a></h3>
+	<ul>
+        <li><a href="/cgi-bin/koha/cataloguing/addbiblio.pl">Add MARC</a></li>
+        <li><a href="/cgi-bin/koha/authorities/authorities-home.pl">Authorities</a></li>
+        <li><a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a></li>
+    </ul>
+    <h3><a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a></h3>
+    <!-- /TMPL_IF --><!-- TMPL_IF NAME="CAN_user_reports" -->
+          <h3><a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a></h3>
+    <!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME="CAN_user_parameters" -->
+   <h3> <a href="/cgi-bin/koha/admin/admin-home.pl">Koha administration</a></h3>
+   			<ul>
+            <li><a href="/cgi-bin/koha/admin/systempreferences.pl">System preferences</a></li>
+        </ul>
+    <!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME="CAN_user_tools" -->
+    <h3><a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a></h3>
+    <!-- /TMPL_IF -->
+    <h3><a href="/cgi-bin/koha/about.pl">About Koha</a></h3>
 	</div>
+	
+	
 	<div class="yui-u">
-	Second Column
+	<!-- TMPL_IF NAME="CAN_user_circulate" -->
+	<h3><a href="/cgi-bin/koha/circ/circulation.pl">Circulation</a></h3>
+	<ul><li>
+       <form method="post" action="/cgi-bin/koha/circ/circulation.pl">
+        <label for="navfindborrower">Check out to:</label>
+            <input id="navfindborrower" name="findborrower" type="text" size="10" />
+            <input type="hidden" name="branch" value="<!-- TMPL_VAR name="branch" -->" />
+            <input type="hidden" name="printer" value="<!-- TMPL_VAR name="printer" -->" />
+            <input type="submit" class="submit" value="OK" />
+       </form>
+       </li>
+       <li><a accesskey="r" href="/cgi-bin/koha/circ/returns.pl">Check in</a></li>
+        <li><a href="/cgi-bin/koha/circ/branchtransfers.pl">Transfers</a></li></ul>
+		<!-- /TMPL_IF -->
+		  <!-- TMPL_IF NAME="CAN_user_borrowers" -->
+		<h3><a href="/cgi-bin/koha/members/members-home.pl">Patrons</a></h3>
+		<ul>
+        <li><form action="/cgi-bin/koha/members/member.pl" method="post">
+           <label for="navmember">Search:&nbsp;</label>
+           <input id="navmember" type="text" size="10" name="member" />
+           <input type="submit" value="OK" class="submit" />
+            </form>
+        </li>
+    </ul>
+	<!-- /TMPL_IF -->
+		  <!-- TMPL_IF NAME="CAN_user_catalogue" -->
+                <h3><a href="/cgi-bin/koha/catalogue/search.pl">Catalogue</a></h3>
+				<ul>
+                    <li>
+                        <form name="searchform" method="get" action="/cgi-bin/koha/catalogue/search.pl" id="searchform">
+                        <input type="hidden" name="idx" value="" />
+                        <label for="navkeyword">
+                            Search:&nbsp;
+                        </label><input type="text" id="navkeyword" name="q" size="10" accesskey="s" />
+                        <input type="submit" value=" OK " class="submit" />
+                        </form>
+                     </li>
+                    <li><a href="/cgi-bin/koha/virtualshelves/shelves.pl">Virtual Shelves</a></li>
+                </ul>
+   <!-- /TMPL_IF -->
 	</div>
-</div>
-<div id="ft">
-footer
+	
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
