Refining holds menu display; restructuring forgotton stopwords.tmpl with breadcrumbs, layout, etc; Formatting reports-home.tmpl as "dashboard."
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -83,7 +83,7 @@ em {
 .yui-u {
 }
 
-#doc3 {
+#doc, #doc1, #doc2, #doc3 {
 	padding-top : 1em;
 }
 
@@ -262,7 +262,7 @@ div#header_search ul.link-tabs li.off a {
 	padding : 0.1em .5em .2em .5em;
 }
 
-div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search,div#checkin_search,div#suggestions_search,div#roadtype_search {
+div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search,div#checkin_search,div#suggestions_search,div#roadtype_search,div#stopword_search {
 	border : 0;
 	border-bottom : 1px solid #FF9900;
 	padding : 0 0 .2em 0;
