--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tmpl
@@ -8,44 +8,48 @@
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; Reports</div>
 
-<div id="doc3" class="yui-t2">
+<div id="doc3" class="yui-t7">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b">
+	<div class="yui-b"><div class="yui-g"> 
 
 <h1>Reports</h1>
 
-	<h2>Statistics wizards</h2>
+<div class="yui-g first">
+<div class="yui-u first">	<h2>Statistics wizards</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/acquisitions_stats.pl">Acquisitions</a></li>
 		<li><a href="/cgi-bin/koha/reports/borrowers_stats.pl">Patrons</a></li>
 		<li><a href="/cgi-bin/koha/reports/catalogue_stats.pl">Catalogue</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_stats.pl">Circulation</a></li>
-	</ul>
+	</ul></div>
 
 
-	<h2>Top Lists</h2>
+	<div class="yui-u"><h2>Top Lists</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Patrons checking out the most</a></li>
 		<li><a href="/cgi-bin/koha/reports/cat_issues_top.pl">Items checked out the most</a></li>
-	</ul>
-	
-	<h2>Inactive</h2>
+	</ul></div>
+</div>
+
+
+<div class="yui-g">	<div class="yui-u first"><h2>Inactive</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/borrowers_out.pl">Patrons who haven't checked out</a></li>
 		<li><a href="/cgi-bin/koha/reports/catalogue_out.pl">Items not checked out</a></li>
-	</ul>
+	</ul></div>
 
 
-	<h2>Other</h2>
+	<div class="yui-u"><h2>Other</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/itemslost.pl">Items lost</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=itemtypes">Catalogue by itemtype</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Checkouts by patron category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
-	</ul>
+	</ul></div></div>
 
+</div>
 </div>
 </div>
 
