fix for #1430 (subscription add fails)
due to us date format not properly set

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-add.tmpl
@@ -895,7 +895,7 @@ window.onload = irregular_order();
                 <script type="text/javascript">
                     Calendar.setup({
                         inputField:"acqui_date",
-                        ifFormat       :   "%d/%m/%Y",
+                        ifFormat       :   "<!-- TMPL_VAR NAME="DHTMLcalendar_dateformat" -->",
                         button         :   "button2",
                         align          :   "Tl"
                     });
@@ -903,7 +903,7 @@ window.onload = irregular_order();
                 <script type="text/javascript">
                     Calendar.setup({
                         inputField     :   "acqui_date",
-                        ifFormat       :   "%d/%m/%Y",
+                        ifFormat       :   "<!-- TMPL_VAR NAME="DHTMLcalendar_dateformat" -->",
                         button         :   "acqui_date",
                         align          :   "Tl"
                     });
@@ -1064,7 +1064,7 @@ window.onload = irregular_order();
                 <script type="text/javascript">
                     Calendar.setup({
                         inputField   : "beginning_date",
-                        ifFormat     : "%d/%m/%Y",
+                        ifFormat     : "<!-- TMPL_VAR NAME="DHTMLcalendar_dateformat" -->",
                         button       : "button1",
                         align        : "Tl"
                     });
@@ -1072,7 +1072,7 @@ window.onload = irregular_order();
                 <script type="text/javascript">
                     Calendar.setup({
                         inputField   : "beginning_date",
-                        ifFormat     : "%d/%m/%Y",
+                        ifFormat     : "<!-- TMPL_VAR NAME="DHTMLcalendar_dateformat" -->",
                         button       : "beginning_date",
                         align        : "Tl"
                     });
