restoring marc21 plugin templates
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_authorities.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/value_builder/marc21_leader_authorities.tmpl
@@ -115,64 +115,8 @@
 		</td>
 	</tr>
 	<tr>
-		<td>7- Bibliographic level</td>
-		<td>
-			<select name="f7" size="1">
-				<!-- TMPL_IF name="f7a" -->
-					<option value="a" SELECTED>a- Monographic component part</option>
-				<!-- TMPL_ELSE -->
-					<option value="a">a- Monographic component part</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7b" -->
-					<option value="b" SELECTED>b- Serial component part</option>
-				<!-- TMPL_ELSE -->
-					<option value="b">a- Serial component part</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7c" -->
-					<option value="c" SELECTED>c- Collection</option>
-				<!-- TMPL_ELSE -->
-					<option value="c">c- Collection</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7d" -->
-					<option value="d" SELECTED>d- Subunit</option>
-				<!-- TMPL_ELSE -->
-					<option value="d">d- Subunit</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7i" -->
-					<option value="i" SELECTED>i- Integrating resource</option>
-				<!-- TMPL_ELSE -->
-					<option value="i">i- Integrating resource</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7m" -->
-					<option value="m" SELECTED>m- Monograph/item</option>
-				<!-- TMPL_ELSE -->
-					<option value="m">m- Monograph/item</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f7s" -->
-					<option value="s" SELECTED>s- Serial</option>
-				<!-- TMPL_ELSE -->
-					<option value="s">s- Serial</option>
-				<!-- /TMPL_IF -->
-			</select>
-		</td>
-	</tr>
-	
-	<tr>
-		<td>8- Hierarchic level</td>
-		<td>
-			<select name="f8" size="1">
-				<!-- TMPL_IF name="f8 " -->
-					<option value=" " SELECTED>No specific type</option>
-				<!-- TMPL_ELSE -->
-					<option value=" ">No specific type</option>
-				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="f8a" -->
-					<option value="a" SELECTED>a- Archival</option>
-				<!-- TMPL_ELSE -->
-					<option value="a">a- Archival</option>
-				<!-- /TMPL_IF -->
-			</select>
-		</td>
+		<td>7-8 Undefined</td>
+		<td></td>
 	</tr>
 
 	<tr>
@@ -312,8 +256,7 @@ function report() {
 			'     '+
 			document.f_pop.f5.value+
 			document.f_pop.f6.value+
-			document.f_pop.f7.value+
-			document.f_pop.f8.value+
+			'  '+
 			document.f_pop.f9.value+ 
 			'22     '+
 			document.f_pop.f17.value+
